# django_calories_tracker

./: .gitignore  README.md  django_calories_tracker.epj  manage.py  pyproject.toml  requirements.txt  update_reusing.py
.github/workflows/: django.yml
calories_tracker/: __init__.py  admin.py  apps.py  commons.py  factory.py  hardcoded_strings.py  models.py  paginators.py  poethepoet.py  requests_methods.py  serializers.py  tests.py  tests_data.py  tests_helpers.py  unogenerator_files.py  update_data.py  views.py  views_login.py
calories_tracker/data/: activities.json  additiverisks.json  additives.json  auth_permission.json  auth_user.json  catalogs.json  catalogs_systemproductsformatsthrough.json  django_content_type.json  django_migrations.json  django_session.json  food_types.json  formats.json  system_companies.json  system_products.json  system_products_additives.json  system_products_formats.json  weight_wishes.json
calories_tracker/fixtures/: all.json  test_users.json
calories_tracker/migrations/: 0001_initial.py  0002_remove_formats_last_products_formats_and_more.py  0002_remove_profiles_id_alter_products_additives_and_more.py  0003_add_group_catalog_manager.py  0004_pots.py  0005_elaborations_recipes_recipeslinkstypes_stirtypes_and_more.py  0006_alter_elaborationssteps_comment_and_more.py  0007_recipes_guests_recipes_soon_recipes_valoration.py  0008_remove_recipeslinks_content_and_more.py  0009_recipeslinks_content.py  0010_remove_elaborations_robot.py  0011_alter_elaborations_recipes.py  0012_rename_products_in_elaborations_elaborations_products_in.py  0013_alter_elaborationssteps_elaborations.py  0014_elaborationssteps_products_in_step.py  0015_elaborationssteps_order.py  0016_recipescategories.py  0017_recipes_recipes_categories.py  0018_measurestypes_products_density_and_more.py  0019_elaborationsproductsinthrough_measure_types.py  0020_rename_measure_types_elaborationsproductsinthrough_measures_types.py  0021_elaboratedproducts_recipes.py  0022_elaborationsexperiences_elaborationscontainers.py  0023_elaborationssteps_container_and_more.py  0024_remove_steps_stir_types_and_more.py  0025_remove_elaborationssteps_temperature.py  0026_remove_elaborationssteps_stir.py  0027_elaborationsproductsinthrough_comment.py  0028_recipes_datetime.py  0029_elaborationsproductsinthrough_ni.py  0030_elaborations_automatic_and_more.py  0031_files.py  0032_recipeslinks_files.py  0033_auto_20221210_0831.py  0033_remove_recipeslinks_content_remove_recipeslinks_mime.py  0034_remove_recipeslinks_content_remove_recipeslinks_mime.py  0035_alter_files_thumbnail.py  0036_pots_height_pots_photo.py  0037_historicalbiometrics.py  0038_steps_can_container_steps_can_container_to_and_more.py  (+12 more)
calories_tracker/reusing/: casts.py  factory_helpers.py  request_casting.py  views_login.py
calories_tracker/templates/: ReportElaboration.odt
calories_tracker/tests/: __init__.py  test_activities.py  test_additives.py  test_additivesrisks.py  test_biometrics.py  test_catalog_manager.py  test_companies.py  test_curiosities.py  test_elaborated_products.py  test_elaborated_products_productsinthrough.py  test_elaborations.py  test_elaborations_containers.py  test_elaborations_experiences.py  test_elaborations_productsinthrough.py  test_elaborations_texts.py  test_food_types.py  test_formats.py  test_meals.py  test_measures_types.py  test_pill_events.py  test_pots.py  test_products.py  test_recipes.py  test_recipes_categories.py  test_recipes_links.py  test_recipes_links_types.py  test_settings.py  test_shopping_list.py  test_statistics.py  test_weight_wishes.py  tests_dinamic_methods.py
catalogs/: manage.py  update_reusing.py
catalogs/catalogs/: admin.py  models.py
catalogs/django_catalogs/: asgi.py  settings.py  urls.py  wsgi.py
ct/: apps.py
django_calories_tracker/: asgi.py  settings.py  urls.py  wsgi.py
django_caloriestracker/: asgi.py  settings.py  wsgi.py
doc/: Doxyfile
(+26 files in other folders)
