[project]
name = "django-calories-tracker"
version = "0.2.0"
description = "Migration of caloriestracker project to vue"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "Django >=6.0",
    "django-cors-headers >=4.9.0",
    "djangorestframework >=3.16.1",
    "django-simple-history >=3.11.0",
    "preview-generator >=0.29",
    "pillow >=12.0.0",
    "drf-spectacular >=0.29.0",
    "psycopg >=3.3.2",
    "pydicts >=1.1.0",
    "request-casting >=0.7.0",
    "humanize >=4.15.0",
    "tqdm >=4.67.1",
    "python-dateutil >=2.9.0.post0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry = "^2.2.1"
poethepoet = "^0.38.0"
coverage = ">=7.13.0"

[tool.poe.tasks]
reusing = { script = "calories_tracker.poethepoet:reusing" }
e2e_server = { script = "calories_tracker.poethepoet:e2e_server" }

[project.urls]
homepage = "https://github.com/turulomio/django_calories_tracker/"
repository = "https://github.com/turulomio/django_calories_tracker/"
changelog = "https://github.com/turulomio/django_calories_tracker#changelog"

